# Physics

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog.txt  DerivedDims.json  DerivedDims.py  Dimensions.json  Dimensions.ods  Dimensions.py  GenJson.py  License.txt  Physics.pro  Physics.qbs  PhysicsCodeGen.py  PhysicsData.json  PhysicsGenerator.py  ReadMe.md  UpdateUnoScript.py
Core/: CMakeLists.txt
Core/include/ph/: Constants.hpp  Operators.hpp  Physics.hpp  Zero.hpp
Core/include/si/: BaseDims.hpp  Constants.hpp  Conversion.hpp  Dim.hpp  Operations.hpp  Physics.hpp  Trigo.hpp  Unit.hpp  Units.hpp  Value.hpp
Core/templates/: AllDims.hpp.j2  DerivedDims.hpp.j2  Dimension.hpp.j2  Item.hpp.j2  SiConfig.hpp.j2  Version.hpp.in
Core/templates/include/ph/: Config.hpp.in  FwdDecl.hpp.glob.in  Item.hpp.item.j2  Version.hpp.in
Core/tests/: CMakeLists.txt  Conversion.cpp  Energy.cpp  MolarMass.cpp  MolecularMass.cpp  Output.cpp  Temperature.cpp  Trigo.cpp  Units.cpp  VolumicMass.cpp  Zero.cpp  main.cpp
DesignerPlugin/: CMakeLists.txt  icons.qrc
DesignerPlugin/cmake/: SvgToPng.cmake
DesignerPlugin/templates/: Config.hpp.in  Label.svg.j2  PhysicsDesignerPlugin.cpp.j2  PhysicsDesignerPlugin.hpp.j2  SI_Units_DesignerPlugin.cpp.j2  SI_Units_DesignerPlugin.hpp.j2  SpinBox.svg.j2  icons.qrc.j2
Physics/: CMakeLists.txt  CodeGen.cpp  Physics.pro  Physics.qbs  Zero.cpp
Physics/include/ph/: Item.hpp.ph_it  Item.hpp.template  Operators.hpp  Physics.hpp  Version.hpp.in  Zero.hpp
Physics/templates/include/ph/: Literals.hpp.glob.in
QPhysics/: CMakeLists.txt  QPhysics.pro  QPhysics.qbs
QPhysicsDesigner/: CMakeLists.txt  QPhysicsDesigner.pro  QPhysicsDesigner.qbs  QPhysicsDesignerPlugin.cpp.ph_gt  QPhysicsDesignerPlugin.hpp.template
QPhysicsDesigner/templates/: QPhysicsDesignerPlugin.hpp.glob.in
QPhysicsUI/: CMakeLists.txt  QItemLabel.cpp.ph_it  QPhysicsUI.pro  QPhysicsUI.qbs  src.qbs
QPhysicsUI/include/: QPhysics_API.hpp
QPhysicsUI/templates/: QItemLabel.cpp.item.j2  QItemSpinBox.cpp.item.in  QItemSpinBox.cpp.item.j2
Widgets/: CMakeLists.txt
Widgets/include/: QPhysicsUI_API.hpp
Widgets/include/siui/: API.hpp
Widgets/templates/: DimLabel.cpp.j2  DimLabel.hpp.j2  DimSpinBox.cpp.j2  DimSpinBox.hpp.j2  QItemLabel.cpp.j2  QItemLabel.hpp.j2  QItemSpinBox.cpp.j2  QItemSpinBox.hpp.j2
cmake/: CodeGen.cmake  PhysicsCodeGen.cmake  SI_Units_CodeGen.cmake
examples/WidgetApp/: CMakeLists.txt  main.cpp  widget.cpp  widget.ui
include/ph/: Config.hpp  Constants.hpp  Operators.hpp  Physics.hpp  Version.hpp
include/physics/: Config.hpp  Constants.hpp  Operators.hpp  Physics.hpp  Version.hpp
modules/phcg/: PhysicsCodeGen.qbs  phcgfuncs.js
templates/: FwdDecl.hpp.template  Item.hpp.template  Literals.hpp.template  Physics.qbs.template  _IncludeAll.hpp.template  globTemplates.json  itemTemplates.json
templates/QPhysics/: QItemSpinBox.cpp.template  QItemSpinBox.hpp.template  QPhysics.cpp.template  QPhysics.hpp.template  src.pri.template
templates/QPhysicsDesigner/: QPhysicsDesignerPlugin.cpp.template  QPhysicsDesignerPlugin.hpp.template
templates/QPhysicsUI/: QItemLabel.cpp.template  QItemLabel.hpp.template  QItemSpinBox.cpp.template  QItemSpinBox.hpp.template  QPhysicsUI.qbs.template  src.pri.template
tests/: MolecularMass.cpp  Temperature.cpp  VolumicMass.cpp  Zero.cpp  main.cpp  tests.pro  tests.qbs
